# kos

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Cross.toml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test.py
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  generate-pykos-docs.yml  publish.yml  test.yml
configs/: torso.yaml
core/: Cargo.toml  build.rs
core/src/: grpc_interface.rs  hal.rs  lib.rs  telemetry.rs
daemon/: Cargo.toml
daemon/.cargo/: config.toml
daemon/src/: file_logging.rs  lib.rs  main.rs
kbrain/bindings/: Cargo.toml
kbrain/rs/: Cargo.toml
kbrain/rust/: Cargo.toml
kbrain/rust/src/: bin.rs
kos/: Cargo.toml  build.rs
kos-py/: Makefile  pyproject.toml  setup.py
kos-py/pykos/: __init__.py  client.py  requirements-dev.txt  requirements-webrtc.txt  requirements.txt
kos-py/pykos/docs/: pykos.md  search.js
kos-py/pykos/docs/pykos/: client.md  services.md
kos-py/pykos/docs/pykos/services/: actuator.md  imu.md  inference.md  led_matrix.md  process_manager.md  sim.md  sound.md
kos-py/pykos/services/: __init__.py  actuator.py  imu.py  inference.py  led_matrix.py  policy.py  process_manager.py  sim.py  sound.py  speech.py
kos-py/pykos/webrtc/: __init__.py  client.py  server.py
kos-py/tests/: test_pykos.py
kos-stub/: Cargo.toml
kos-stub/src/: actuator.rs  imu.rs  lib.rs  main.rs  policy.rs  process_manager.rs  speech.rs
kos/bindings/: Cargo.toml
kos/bindings/src/: bin.rs  lib.rs
kos/kos/src/: config.rs  lib.rs
kos/proto/kos/: actuator.proto  imu.proto  inference.proto  led_matrix.proto  policy.proto  sim.proto  sound.proto  speech.proto
kos/rust/: Cargo.toml
kos/src/: config.rs  daemon.rs  file_logging.rs  grpc_interface.rs  hal.rs  lib.rs  telemetry.rs  telemetry_types.rs
kos/src/services/: actuator.rs  imu.rs  inference.rs  led_matrix.rs  mod.rs  policy.rs  sound.rs  speech.rs
kos/tests/: actuator.rs  imu.rs  lib.rs  stub_test.rs
kos_core/: Cargo.toml  build.rs
kos_core/kos/: actuator_pb2.py  actuator_pb2_grpc.py  imu_pb2_grpc.py  inference_pb2_grpc.py  process_manager_pb2_grpc.py  system_pb2_grpc.py
kos_core/proto/kos/: actuator.proto  imu.proto  inference.proto  kclip.proto  process_manager.proto
kos_core/src/: grpc_interface.rs  hal.rs  lib.rs  process_manager.rs  telemetry.rs  telemetry_types.rs
kos_core/src/services/: actuator.rs  imu.rs  inference.rs  kclip_logger.rs  krec_logger.rs  mod.rs  operations.rs  process_manager.rs
kscaleos/bindings/: Cargo.toml
kscaleos/bindings/src/: lib.rs
kscaleos/kos/: Cargo.toml
kscaleos/kos/src/: runner.rs
kscaleos/kscaleos/: Cargo.toml
kscaleos/kscaleos/src/: config.rs  lib.rs  runner.rs  state.rs
kscaleos/rust/: Cargo.toml
kscaleos_client_py/pykos/: __init__.py  client.py
proto/kos/: actuator.proto  imu.proto  system.proto
protos/: control.proto
protos/kos/: imu.proto  process_manager.proto
pykos/: Makefile  pyproject.toml  setup.py
pykos/pykos/: __init__.py  client.py  requirements-dev.txt  requirements.txt
pykos/pykos/services/: actuator.py  imu.py  process_manager.py
toolchain/: Dockerfile  bump_version.sh
