[workspace]

members = [
    "kos/bindings",
    "kos/kos",
]
resolver = "2"

[workspace.package]

version = "0.1.0"
authors = ["Wesley Maa <wesley@kscale.dev>", "Pawel Budzianowski <pawel@kscale.dev>", "Benjamin Bolte <ben@kscale.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kscalelabs/kos"
description = "The K-Scale Operating System"
documentation = "https://docs.kscale.dev/kos/intro"
readme = "README.md"
