[package]
name = "core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yaml-rust2 = "0.9"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
rumqttc = "0.13"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"
