[package]
name = "kos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
kos_core = { version = "0.1.1", path = "../kos_core" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"

kos-sim = { version = "0.1.0", path = "../platforms/sim", optional = true }
kos-stub = { version = "0.1.0", path = "../platforms/stub", optional = true }
kos-zeroth-01 = { version = "0.1.0", path = "../platforms/zeroth-01", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
kos-kbot = { version = "0.1.0", path = "../platforms/kbot", optional = true }

[features]
kos-zeroth-01 = ["dep:kos-zeroth-01"]
kos-sim = ["dep:kos-sim"]
kos-stub = ["dep:kos-stub"]
default = ["kos-kbot"]

[[bin]]
name = "kos"
path = "src/main.rs"
