[package]
name = "kos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
kos_core = { version = "0.1.1", path = "../kos_core" }
tokio = { version = "1", features = ["full"] }
tonic = { git = "https://github.com/hatomist/tonic-milkv" }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
directories = "5.0"
flate2 = "1.0"

kos-sim = { version = "0.1.0", path = "../platforms/sim", optional = true }
kos-stub = { version = "0.1.0", path = "../platforms/stub", optional = true }
kos-zeroth-01 = { version = "0.1.0", path = "../platforms/zeroth-01", optional = true }
kos-kbot = { version = "0.1.0", path = "../platforms/kbot", optional = true }

[features]
kos-zeroth-01 = ["dep:kos-zeroth-01"]
kos-sim = ["dep:kos-sim"]
kos-stub = ["dep:kos-stub"]
default = ["kos-stub"]

[[bin]]
name = "kos"
path = "src/main.rs"
