[package]
name = "kos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
build = "build.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
directories = "5.0"
eyre = "0.6"
flate2 = "1.0"
hyper = "0.14"
krec = "0.2"
lazy_static = "1.4"
prost = "0.13"
prost-types = "0.13"
rumqttc = { version = "0.24", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# TODO: Remove this once 0.13 is released
tonic = { version="0.12", git = "https://github.com/kscalelabs/tonic-milkv" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml-rust2 = "0.9"

[build-dependencies]
tonic-build = { version = "0.12", git = "https://github.com/kscalelabs/tonic-milkv" }

[lib]
doctest = false
