[package]
name = "kos_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
build = "build.rs"

[dependencies]
base64 = "0.22"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = "0.9"
tonic = { version = "0.12",  git = "https://github.com/hatomist/tonic-milkv" }
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
rumqttc = { version = "0.24", default-features = false }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
hyper = "0.14"
tracing = "0.1"
lazy_static = "1.4"
krec = "0.2"

[build-dependencies]
tonic-build = { version = "0.12", git = "https://github.com/hatomist/tonic-milkv" }

[lib]
doctest = false
