[package]

name = "kbrain"
readme = "README.md"
version = "0.0.1"
description = "The brain for K-Scale's humanoid robots"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "kbrain"
crate-type = ["cdylib", "rlib"]

[dependencies]

serialport = "^4.5.1"
ctrlc = "^3.4.5"
lazy_static = "^1.4.0"
spin_sleep = "^1.2.1"
nix = "^0.26.2"
log = "^0.4.22"

[[bin]]

name = "motors"
path = "src/bin/motors.rs"

[dependencies.clap]

version = "4.3"
features = ["derive"]