[package]

name = "kbrain"
readme = "README.md"
version = "0.0.1"
description = "The brain for K-Scale's humanoid robots"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "kbrain"
crate-type = ["cdylib", "rlib"]

[[bin]]

name = "kbrain"
path = "src/bin.rs"
