[package]

name = "kos"
version.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "kbrain"
crate-type = ["cdylib", "rlib"]

[[bin]]

name = "kbrain"
path = "src/bin.rs"
