[package]

name = "bindings"
version.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { version = ">= 0.21.0", features = ["extension-module"] }
pyo3-stub-gen = ">= 0.6.0"

# Other packages in the workspace.
kscaleos = { path = "../rust" }

[[bin]]

name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]

name = "stub_gen"
path = "src/bin/stub_gen.rs"
