[package]

name = "kscaleos"
version.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "kscaleos"
crate-type = ["cdylib", "rlib"]

[[bin]]

name = "kscaleos"
path = "src/bin.rs"

[dependencies]
robstride = "0.2.1"
tonic = "0.12.3"
tonic-web = "0.12.3"

# Serde is used for parsing configuration files.
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
ort = { version = "1.16.3", optional = true }

[build-dependencies]
tonic-build = "0.12.3"
