[package]

name = "kscaleos"
version.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]

name = "kscaleos"
crate-type = ["cdylib", "rlib"]

[[bin]]

name = "kscaleos"
path = "src/bin.rs"
